# project/swagger.json
@@ -19,7 +19,7 @@
         ],
         "summary": "Create product",
         "description": "this can only be done by logged in user.",
-        "operationID": "createPerson",
+        "operationID": "createProduct",
         "produces": [
           "application/xml",
           "application/json"
@@ -55,7 +55,7 @@
           {
             "in": "path",
             "name": "id",
-            "description": "Person ID",
+            "description": "Product ID",
             "required": true
           },
           {
@@ -102,8 +102,41 @@
       }
     },
     "/product/{id}": {
-
-      
+      "get": {
+        "tags": [
+          "product"
+        ],
+        "summary": "Gets a list of product by id",
+        "description": "Get person by ID.",
+        "operationID": "getProduct",
+        "produces": [
+          "application/xml",
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "the id that needs to be fetched",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "descrition": "succeful operation",
+            "schema": {
+              "$ref": "#/definitions/product"
+            }
+          },
+          "400": {
+            "description": "invalid id suplied"
+          },
+          "404": {
+            "description": "id not found"
+          }
+        }
+      }
     },
     "definitions": {
       "product": {
